Revision history for Net-XMPP2

0.10
         - messages are 'replied' to the bare JID now and also
           Net::XMPP2::Client::send_message will take care of stripping the resource now.
         - fixed a race condition with the account adding routine
           of Net::XMPP2::Client.
         - also fixed a small bug in stream initiation, Net::XMPP2 now
           sends a xml declaration again.
         - implemented a very old authentication method which makes Net::XMPP2
           now also work with jabberd 1.4.2. See also the
           'disable_old_jabber_authentication' option in Net::XMPP2::Connection
         - fixed cpan bug #29724 (unpacking the tarball on os x works now
           after renaming devcl -> dev_client).
         - fixed a bug with handling the is_room query in MUC

0.09 Sun Sep 16 09:25:25 CEST 2007
         - fixed a small bug important bug in namespace setting when binding
           a resource. this was a showstopper for eg. jabber.org.

0.08 Sat Sep 15 10:50:00 CEST 2007
         - fixed glitches in tests
         - added disco_info example
         - updated disco_info example, added data form retrieval in disco_info
         - fixed bug in whitespace ping
         - added character filter functions for filtering out not-allowed XML
           chars before sending them to the server. Even though this might be
           a programmer error and shouldn't probably be handled by Net::XMPP2
           I added it for convenience. Hopefully noone is confused.
         - fixed potential bug in ping extension
         - added a sample bot samples/talkbot
         - fixed small issue in Writer.pm
         - added other sample bot samples/talkbot_channel
         - added sample script to retrieve roster: samples/retrieve_roster

0.07 Tue Aug 14 19:22:11 CEST 2007
         - implemented whitespace ping and:
            - XEP-0199 - XMPP Ping
         - added next_iq_id() method to Net::XMPP2::Connection