@@ -1,8 +1,9 @@
 Revision history for Net-XMPP2
 
 0.10
-         - messages are 'replied' to the bare JID now and also
-           Net::XMPP2::Client::send_message will take care of stripping the resource now.
+         - implemented conversation/chat session tracking,
+           see Net::XMPP2::Client::send_message and
+           Net::XMPP2::IM::Account::send_tracked_message.
          - fixed a race condition with the account adding routine
            of Net::XMPP2::Client.
          - also fixed a small bug in stream initiation, Net::XMPP2 now
